[project]
name = "zandla"
version = "0.1.0"
description = "Robot learning with SO-101 robot arm."
requires-python = ">=3.12, <3.13"


dependencies = [
    "torch==2.7.0",
    "torchvision",
    "torchaudio",
    "matplotlib>=3.10.8",
    "requests>=2.32.5",
    "huggingface>=0.0.1",
    "transformers>=5.2.0",
    "torchtyping>=0.1.5",
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "chalk-diagrams",
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[tool.uv.sources]
chalk-diagrams = { git = "https://github.com/chalk-diagrams/chalk" }
# Optional configuration for uv
