[project]
name = "zandla"
version = "0.1.0"
description = "Robot learning with SO-101 robot arm."
requires-python = ">=3.12, <3.13"


dependencies = [
    "lerobot[feetech]==0.5.1",
    "torch==2.7.0",
    "torchvision",
    "torchaudio",
    "matplotlib",
    "requests",
    "huggingface",
    "transformers",
    "torchtyping",
    "hypothesis",
    "pytest",
    "chalk-diagrams",
    "ipython",
    "jupyter",
    "mujoco>=3.9.0",
    "dm_control",
    "gymnasium",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[tool.uv.sources]
chalk-diagrams = { git = "https://github.com/chalk-diagrams/chalk" }
# Optional configuration for uv
